[package]
name = "rust_smasher"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]

[[bin]]
name = "master_smasher"
path = "src/main.rs"

[lib]
name = "moho"
path = "src/moho/lib.rs"

[dependencies]
glm = "0.2.2"

[dependencies.sdl2]
version = "0.27"
default-features = false
features = ["image"]