[package]
name = "rust_smasher"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]

[[bin]]
name = "master_smasher"
path = "src/main.rs"

[dependencies]
moho = ">=0.0.1"
glm = ">=0.2.2"
num-traits = ">=0.1.36"
error-chain = ">=0.9"
serde = ">=0.9"
serde_yaml = ">=0.6"
serde_derive = ">=0.9"

[dependencies.sdl2]
version = ">=0.29"
default-features = false
features = ["image"]